REGRESSION: rtl horizontal scrollbar / resize bug - Body shifts on resize when scrolled all the way to the left https://bugs.webkit.org/show_bug.cgi?id=70395

Reviewed by Tony Chang.

Source/WebCore:

Change the condition to perform immediate scolling inside ScrollView::updateScrollbars()
to be correct for RTL page as well, which is checking either the scroll position change or
the m_scrollOrigin changes (such as in window resize in which scroll position might remain the same).

And remove condition checking inside ScrollableArea::scrollToOffsetWithoutAnimation() since
the pass-in offset is adjusted within the current scroll range, it could be the same as
m_currentPos when m_currentPos is (0, 0) and current scroll range is smaller than old
scroll range, but scolling is still needed when page resize and scroll range changes.

Test: fast/dom/rtl-scroll-to-leftmost-and-resize.html

* platform/ScrollAnimator.cpp:
(WebCore::ScrollAnimator::scrollToOffsetWithoutAnimation): Remove condition checking.
* platform/ScrollView.cpp:
(WebCore::ScrollView::updateScrollbars): Change condition to perform immediate scrolling to be
correct for RTL pages as well.
* platform/ScrollableArea.cpp: Update m_scrollOriginChanged.
(WebCore::ScrollableArea::ScrollableArea):
(WebCore::ScrollableArea::setScrollOrigin):
(WebCore::ScrollableArea::setScrollOriginX):
(WebCore::ScrollableArea::setScrollOriginY):
* platform/ScrollableArea.h: Add m_scrollOriginChanged.
(WebCore::ScrollableArea::scrollOriginChanged):
(WebCore::ScrollableArea::resetScrollOriginChanged):

LayoutTests:

* fast/dom/rtl-scroll-to-leftmost-and-resize.html: Added.
* platform/chromium/test_expectations.txt:
* platform/mac-snowleopard/fast/dom/rtl-scroll-to-leftmost-and-resize-expected.png: Added.
* platform/mac-snowleopard/fast/dom/rtl-scroll-to-leftmost-and-resize-expected.txt: Added.


Canonical link: https://commits.webkit.org/88183@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@99616 268f45cc-cd09-0410-ab3c-d52691b4dbfc